# rannasta-suomeen-sdk

./: .gitignore  Cargo.toml  Dockerfile  README.md  init.sh  pg_hba.conf
.github/workflows/: cd.yml
src/: constants.rs  lib.rs
src/authentication/: cryptography.rs  jwt.rs  middleware.rs  permissions.rs
src/cache/: cache.rs
src/database/: actions.rs  error.rs  form.rs  pagination.rs  schema.rs  schema.sql  srs.rs
src/database/actions/: cabinets.rs  incredients.rs  price_history.rs  products.rs  queues.rs  recipes.rs  similarity.rs  tags.rs  users.rs
util/: build.sh  nuke.sh
