[package]
name = "rannasta_suomeen_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
potion = { git = "https://github.com/TuuKeZu/potion-rs.git", branch = "v2" }
# potion = { path = "../potion-rs" }
warp = "0.3.7"
serde_json = "1.0.115"
serde = "1.0.197"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "postgres", "chrono" ]}
argon2 = "0.5.3"
jwt = "0.16.0"
sha2 = "0.10.8"
hmac = "0.12.1"
chrono = { version = "0.4.26", features = ["serde"]}
rand = "0.8.5"
redis = {version = "0.26.0", features = ["tokio-comp", "aio"]}
uuid = { version = "1.10.0", features = ["v4"] }
csscolorparser = "0.7.0"
redis-macros = "0.4.0"
log = "0.4.22"
# Remove for now (#34)
# strsim = "0.11.1"
# ngram = "0.1.13"
